--- a/admin/index.html
+++ b/admin/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://res.cloudinary.com/drts3ztiy/image/upload/v1730324855/wnw534mdphozpipgcru0.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food-Del Admin</title>
+    <title>BiTEZ-Del Admin</title>
   </head>
   <body>
     <div id="root"></div>
